syntax = "proto3";

option csharp_namespace = "RestGraphQLgRPC.Server.Api";

package movie;

service MovieGrpcService {
  rpc GetMovies (Empty) returns (stream Movie);
  rpc AddMovie (Movie) returns (MovieResponse);
}

message Empty {}

message Movie {
  int32 id = 1;
  string title = 2;
  string director = 3;
  int32 releaseYear = 4;
}

message MovieResponse {
  string message = 1;
  int32 movieId = 2;
}